--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost:27017/blogify
+MONGO_URL="mongodb+srv://cluster0.y0lti.mongodb.net/" --apiVersion 1 --username nishthakathpal902 --password IJ2IBfeBaqTQWUyq
 PORT=8000
