--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb+srv://cluster0.y0lti.mongodb.net/" --apiVersion 1 --username nishthakathpal902 --password IJ2IBfeBaqTQWUyq
+MONGO_URL=mongodb+srv://nishthakathpal902:IJ2IBfeBaqTQWUyq@cluster0.mongodb.net/BlogBuzz?retryWrites=true&w=majority
 PORT=8000
