--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://nishthakathpal902:IJ2IBfeBaqTQWUyq@cluster0.mongodb.net/BlogBuzz?retryWrites=true&w=majority
+MONGO_URL=mongodb://nishthakathpal902:IJ2IBfeBaqTQWUyq@cluster0.mongodb.net:27017/BlogBuzz?retryWrites=true&w=majority
 PORT=8000
